--- a/helm/templates/deployment-web.yaml
+++ b/helm/templates/deployment-web.yaml
@@ -18,34 +18,30 @@ spec:
         - name: web
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          command: ["flask", "run", "--host=0.0.0.0"]
+          command:
+            {{- if .Values.db_init }}
+            - /bin/sh
+            - -c
+            - |
+              python db_init.py && flask run --host=0.0.0.0
+            {{- else }}
+            - flask
+            - run
+            - --host=0.0.0.0
+            {{- end }}
           ports:
             - containerPort: 5000
-          env:
-            - name: FLASK_ENV
-              value: {{ .Values.env.FLASK_ENV | quote }}
-            - name: API_BASE
-              value: {{ .Values.env.API_BASE | quote }}
-            - name: DATABASE_URI
-              value: {{ .Values.env.DATABASE_URI | quote }}
-            - name: FERNET_KEY
-              valueFrom:
-                secretKeyRef:
-                  name: repo-scanner-secret
-                  key: FERNET_KEY
-            - name: RABBITMQ_HOST
-              value: {{ .Values.env.RABBITMQ_HOST | quote }}
-            - name: RABBITMQ_USER
-              value: {{ .Values.env.RABBITMQ_USER | quote }}
-            - name: RABBITMQ_PASS
-              value: {{ .Values.env.RABBITMQ_PASS | quote }}
+          envFrom:
+            - secretRef:
+                name: repo-scanner-secret
+            - configMapRef:
+                name: repo-scanner-env
           volumeMounts:
             - name: data-volume
-                mountPath: /app/instance
+              mountPath: /app/instance
             - name: data-volume
-                mountPath: /app/files
+              mountPath: /app/files
       volumes:
         - name: data-volume
           persistentVolumeClaim:
             claimName: repo-scanner-data
-
