--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,39 +19,44 @@ services:
       - .:/app
     depends_on:
       - rabbitmq
-    command: >
-      bash -c "python db_init.py && flask run --host=0.0.0.0 --port=5000"
+    entrypoint: ["/app/entrypoint.sh"]
 
   rabbitmq:
     image: rabbitmq:3-management
     container_name: scanner-rabbitmq
     ports:
       - "5672:5672"
-      - "15672:15672"  # management UI
+      - "15672:15672"
     environment:
       - RABBITMQ_DEFAULT_USER=admin
       - RABBITMQ_DEFAULT_PASS=admin
 
   worker:
     build: .
+    container_name: scanner-worker
     environment:
       - FERNET_KEY=${FERNET_KEY}
       - API_BASE=http://web:5000
       - RABBITMQ_HOST=rabbitmq
+      - RABBITMQ_USER=${RABBITMQ_USER}
+      - RABBITMQ_PASS=${RABBITMQ_PASS}
       - TRUFFLEHOG_NO_UPDATE=true
     command: ["python", "init_worker.py"]
     depends_on:
       - web
       - rabbitmq
     restart: always
-  
+    volumes: []  # ⛔️ prevent source code override
+
   scheduler:
     build: .
+    container_name: scanner-scheduler
     environment:
       - FERNET_KEY=${FERNET_KEY}
       - API_BASE=http://web:5000
       - DATABASE_URI=${DATABASE_URI}
+    command: ["python", "run_scheduler.py"]
     depends_on:
       - web
-    command: ["python", "run_scheduler.py"]
     restart: always
+    volumes: []  # ⛔️ prevent source code override
