--- a/helm/templates/deployment-web.yaml
+++ b/helm/templates/deployment-web.yaml
@@ -23,7 +23,7 @@ spec:
             - /bin/sh
             - -c
             - |
-              python db_init.py && flask run --host=0.0.0.0
+              /app/entrypoint.sh
             {{- else }}
             - flask
             - run
